Creating a temp v7 and adding in some basic routing.

--- a/app/views/v7/date-of-birth.html
+++ b/app/views/v7/date-of-birth.html
@@ -1,59 +1,57 @@
 {% extends 'layout.html' %}
 
-{% set mainClasses = "nhsuk-main-wrapper--s" %}
-
-{% block pageTitle %}
-What is your date of birth?
-{% endblock %}
+{% block pageTitle %}{{ serviceName }} - What is your date of birth?{% endblock %}
 
 {% block outerContent %}
-
+  {{ backLink({
+    href: 'javascript:history.go(-1);',
+    text: 'Go back'
+  }) }}
 {% endblock %}
 
+
+
 {% block content %}
-
-
-
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
 
-    <form action="enter-postcode" method="post" class="form">
+    <form action="date-of-birth" method="post" novalidate>
 
       {{ dateInput({
       id: 'dateOfBirth',
       namePrefix: 'dateOfBirth',
       fieldset: {
-      legend: {
-      text: 'What is your date of birth?',
-      classes: 'nhsuk-label--l',
-      isPageHeading: true
-      }
+        legend: {
+          text: 'What is your date of birth?',
+          classes: 'nhsuk-label--l',
+          isPageHeading: true
+        }
       },
       hint: {
-      text: 'For example, 15 3 1984'
+        text: 'For example, 15 3 1984'
       },
       items: [
-      {
-      name: 'day',
-      classes: 'nhsuk-input--width-2',
-      value: data.dateOfBirth.day
-      },
-      {
-      name: 'month',
-      classes: 'nhsuk-input--width-2',
-      value: data.dateOfBirth.month
-      },
-      {
-      name: 'year',
-      classes: 'nhsuk-input--width-4',
-      value: data.dateOfBirth.year
-      }
+        {
+          name: 'day',
+          classes: 'nhsuk-input--width-2',
+          value: data.dateOfBirth.day
+        },
+        {
+          name: 'month',
+          classes: 'nhsuk-input--width-2',
+          value: data.dateOfBirth.month
+        },
+        {
+          name: 'year',
+          classes: 'nhsuk-input--width-4',
+          value: data.dateOfBirth.year
+        }
       ]
       }) }}
 
 
       {{ button({
-      text: 'Continue'
+        text: 'Continue'
       }) }}
 
 
