--- a/app/views/v7/enter-reference-number-again.html
+++ b/app/views/v7/enter-reference-number-again.html
@@ -1,55 +1,44 @@
 {% extends 'layout.html' %}
 
-{% set mainClasses = "nhsuk-main-wrapper--s" %}
-
-{% block pageTitle %}
-Enter your your reference number again
-{% endblock %}
+{% block pageTitle %}{{ serviceName }} - Enter your reference number again{% endblock %}
 
 {% block outerContent %}
-
+  {{ backLink({
+    href: 'javascript:history.go(-1);',
+    text: 'Go back'
+  }) }}
 {% endblock %}
 
+
 {% block content %}
+  <div class="nhsuk-grid-row">
+    <div class="nhsuk-grid-column-two-thirds">
 
+      <form action="enter-reference-number-again" method="post" novalidate>
 
-<div class="nhsuk-grid-row">
-  <div class="nhsuk-grid-column-two-thirds">
+        <span class="nhsuk-caption-m">Your details</span>
 
-    <form action="date-of-birth" method="post" class="form">
-      <span class="nhsuk-caption-m">Your details</span>
+        {{ input({
+             label: {
+                 text: 'Enter your reference number again',
+                 classes: 'nhsuk-label--l',
+                 isPageHeading: true
+             },
+            hint: {
+                text: 'We ask this to make sure we find the correct record.'
+            },
+            id: 'referenceNumberConfirmation',
+            classes: 'nhsuk-input--width-10'
+        }) }}
 
-      {% call fieldset({
-      legend: {
-      text: 'Enter your your reference number again',
-      classes: 'nhsuk-fieldset__legend--l',
-      isPageHeading: true
-      }
-      }) %}
+        {{ button({
+            text: 'Continue'
+        }) }}
+        
+       </form>
 
-      {{ input({
-      hint: {
-      text: "We ask this to make sure we find the correct record."
-      },
-      classes: 'nhsuk-u-width-two-thirds',
-      id: 'referenceNumber',
-      name: 'referenceNumber',
-      value: data.referenceNumber
-      }) }}
+       <p><a href="start">Cancel</a></p>
 
-      {% endcall %}
-
-      {{ button({
-      text: 'Continue'
-      }) }}
-
-      <p><a href="respond-to-your-letter">Cancel</a></p>
-
-    </form>
-
-
-
+    </div>
   </div>
-</div>
-
 {% endblock %}
