Fixing beforeContent block.

--- a/app/views/v7/date-of-birth.html
+++ b/app/views/v7/date-of-birth.html
@@ -2,7 +2,7 @@
 
 {% block pageTitle %}{{ serviceName }} - What is your date of birth?{% endblock %}
 
-{% block outerContent %}
+{% block beforeContent %}
   {{ backLink({
     href: 'javascript:history.go(-1);',
     text: 'Go back'
