--- a/app/views/v7/enter-reference-number.html
+++ b/app/views/v7/enter-reference-number.html
@@ -2,7 +2,7 @@
 
 {% block pageTitle %}{{ serviceName }} - What is your reference number?{% endblock %}
 
-{% block outerContent %}
+{% block beforeContent %}
   {{ backLink({
     href: 'javascript:history.go(-1);',
     text: 'Go back'
