Removing the "Penalty charges" (plural)

--- a/app/views/v5-enquiry/pcn-accepted-EXPEDITE.html
+++ b/app/views/v5-enquiry/pcn-accepted-EXPEDITE.html
@@ -37,7 +37,7 @@ You are not entitled to free NHS prescriptions
                       value: { text: '£9.90' }
                     },
                     {
-                      key: { text: 'Penalty charges' },
+                      key: { text: 'Penalty charge' },
                       value: { text: '£50.00' }
                     },
                     {
