--- a/app/views/v6-pcn-decs/MACRO-payment-block.njk
+++ b/app/views/v6-pcn-decs/MACRO-payment-block.njk
@@ -28,7 +28,7 @@
                       value: { text: '£27.40' }
                     },
                     {
-                      key: { text: 'Penalty charges' },
+                      key: { text: 'Penalty charge' },
                       value: { text: '£50.00' }
                     },
                     {
