--- a/app/views/v6-pcn/surcharge-penalty-charge-notice-DD-BLOCKED.html
+++ b/app/views/v6-pcn/surcharge-penalty-charge-notice-DD-BLOCKED.html
@@ -85,7 +85,7 @@ Penalty Charge Notice details on hold
     
     <div class="nhsuk-summary-list__row">
       <dt class="nhsuk-summary-list__key">
-        Penalty charges
+        Penalty charge
       </dt>
       <dd class="nhsuk-summary-list__value">
         £48.25
