--- a/app/views/v6-pcn-decs/surcharge-penalty-charge-notice-DD-BLOCKED.html
+++ b/app/views/v6-pcn-decs/surcharge-penalty-charge-notice-DD-BLOCKED.html
@@ -73,7 +73,7 @@ Penalty Charge Notice details on hold
         
         <div class="nhsuk-summary-list__row">
         <dt class="nhsuk-summary-list__key">
-            Penalty charges
+            Penalty charge
         </dt>
         <dd class="nhsuk-summary-list__value">
             £50.00
