--- a/app/views/v7-temp/MACRO-payment-block.njk
+++ b/app/views/v7-temp/MACRO-payment-block.njk
@@ -59,7 +59,7 @@
                       value: { text: '£9.65' }
                     },
                     {
-                      key: { text: 'Penalty charges' },
+                      key: { text: 'Penalty charge' },
                       value: { text: '£48.25' }
                     },
                     {
