--- a/app/views/v7/contact-preferences.html
+++ b/app/views/v7/contact-preferences.html
@@ -18,11 +18,11 @@ text: "Go back"
 }) }}
 <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
-        <span class="nhsuk-caption-m">Confirm your entitlement</span>
-        <form action="what-is-your-email" method="get" class="form">
+        <form action="contact-preferences" method="post" class="form">
+            <span class="nhsuk-caption-m">Confirm your entitlement</span>
             {{ checkboxes({
-            idPrefix: "example",
-            name: "example",
+            idPrefix: "contactPreferences",
+            name: "contactPreferences",
             fieldset: {
             legend: {
             text: "We'll review your case and get back to you, How can we contact you?",
@@ -48,8 +48,8 @@ text: "Go back"
             {{ button({
             text: 'Continue'
             }) }}
+            <p><a href="respond-to-your-letter">Cancel</a></p>
         </form>
-        <p><a href="respond-to-your-letter">Cancel</a></p>
     </div>
 </div>
 {% endblock %}
