--- a/app/views/v7/enter-postcode.html
+++ b/app/views/v7/enter-postcode.html
@@ -6,8 +6,11 @@
 Enter your postcode as shown on your letter
 {% endblock %}
 
-{% block outerContent %}
-
+{% block beforeContent %}
+{{ backLink({
+href: 'javascript:history.go(-1);',
+text: 'Go back'
+}) }}
 {% endblock %}
 
 {% block content %}
@@ -16,7 +19,7 @@ Enter your postcode as shown on your letter
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
 
-    <form action="enquiry-letter-details" method="get" class="form">
+    <form action="enter-postcode" method="post" class="form">
 
       <span class="nhsuk-caption-m">Your details</span>
 
