--- a/app/views/v7/exemption-certificate-number.html
+++ b/app/views/v7/exemption-certificate-number.html
@@ -21,8 +21,8 @@ text: "Go back"
   <div class="nhsuk-grid-column-two-thirds">
 
 
-    <span class="nhsuk-caption-m">Confirm your entitlement</span>
-    <form action="contact-preferences" method="get" class="form">
+    <form action="exemption-certificate-number" method="post" class="form">
+      <span class="nhsuk-caption-m">Confirm your entitlement</span>
 
       {% set certNumber %}
       {{ input({
@@ -36,9 +36,9 @@ text: "Go back"
       {% endset -%}
 
       {{ radios({
-      idPrefix: "example-inline",
-      name: "example-inline",
-      classes: "nhsuk-radios--inline",
+      idPrefix: "exemptionNumber",
+      name: "exemptionNumber",
+      classes: "nhsuk-radios",
       fieldset: {
       legend: {
       text: "Do you know your [Benefit] number?",
@@ -70,9 +70,9 @@ text: "Go back"
       text: 'Continue'
       }) }}
 
-    </form>
 
-    <p class="navigation"><a class="cancel" href="start">Cancel</a></p>
+      <p class="navigation"><a class="cancel" href="start">Cancel</a></p>
+    </form>
 
 
   </div>
