--- a/app/views/v7/payment-method.html
+++ b/app/views/v7/payment-method.html
@@ -20,7 +20,7 @@ text: "Go back"
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
 
-    <form action="full-partial" method="get" class="form">
+    <form action="payment-method" method="post" class="form">
 
       <span class="nhsuk-caption-m">Pay a Penalty Charge Notice</span>
 
