--- a/app/views/v7/confirmation-page.html
+++ b/app/views/v7/confirmation-page.html
@@ -39,7 +39,7 @@ An exemption has been found
 
     <div class="nhsuk-inset-text">
       <span class="nhsuk-u-visually-hidden">Information: </span>
-      <p>Michelle Doe</p>
+      <p>Jack Burton</p>
       <p>Reference number 01234567890</p>
     </div>
 
