--- a/app/views/v7/payment-method.html
+++ b/app/views/v7/payment-method.html
@@ -25,8 +25,8 @@ text: "Go back"
       <span class="nhsuk-caption-m">Pay a Penalty Charge Notice</span>
 
       {{ radios({
-      idPrefix: "example",
-      name: "example",
+      idPrefix: "paymentType",
+      name: "paymentType",
       fieldset: {
       legend: {
       text: "How would you like to pay your penalty charge?",
