--- a/app/views/v7/cannot-confirm.html
+++ b/app/views/v7/cannot-confirm.html
@@ -17,7 +17,7 @@ We cannot confirm you were entitled
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
 
-    <form action="" method="get" class="form">
+    <form action="cannot-confirm" method="post" class="form">
 
       <span class="nhsuk-caption-m">Confirm your entitlement</span>
 
@@ -31,21 +31,29 @@ We cannot confirm you were entitled
         <p>The information you've given us does not prove you were entitled to free NHS prescriptions between 1 June
           2025 to 30 June 2025.</p>
 
-        <h3>If you think you were entitled</h2>
+        <h3>If you were not entitled</h2>
+          <p>You will need to pay the full amount of £57.90.</p>
 
-          <p>Send us proof to show that you were entitled to free NHS prescriptions or had a valid Prescription
-            Prepayment Certificate between 1 June 2025 to 30 June 2025.</p>
+          {{ button({
+          text: "Pay now"
+          }) }}
+          <!-- <p>Send us proof to show that you were entitled to free NHS prescriptions or had a valid Prescription
+            Prepayment Certificate between 1 June 2025 to 30 June 2025.</p> -->
 
-          <p><a href="we-need-proof">Find out about what we can accept as proof and where to send it.</a></p>
+          <!-- <p><a href="we-need-proof">Find out about what we can accept as proof and where to send it.</a></p> -->
+          <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made this
+            claim, you can ask us to review your enquiry letter. <a href="ask-for-review">Find out if you can
+              ask for a review</a>.</p>
 
-          <h3>If you were not entitled</h2>
+          <h3>If you think you were entitled</h2>
 
             <p>You will be sent a Penalty Charge Notice. This will include information on how and when to pay your
               penalty charge.</p>
 
-            <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made this
+            <!-- <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made this
               claim, you can ask us to review your enquiry letter. <a href="ask-for-review">Find out if you can
-                ask for a review</a>.</p>
+                ask for a review</a>.</p> -->
+            <p><a href="we-need-proof">Find out about what we can accept as proof and where to send it.</a></p>
             <p><a href="">Print this page</a></p>
             <h3>Feedback</h3>
             <p>Leaving feedback takes 5 minutes. Your comments will help us provide a better service.</p>
@@ -54,6 +62,7 @@ We cannot confirm you were entitled
                 target="_blank">Leave feedback (opens in a new window)</a>
             </p>
       </fieldset>
+    </form>
   </div>
 </div>
 
