--- a/app/views/v7/check-personal-details.html
+++ b/app/views/v7/check-personal-details.html
@@ -20,7 +20,7 @@ text: "Go back"
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
 
-    <form action="confirmation-page-dwp" method="post" class="form">
+    <form action="check-personal-details" method="post" class="form">
 
       <span class="nhsuk-caption-m">Confirm your entitlement</span>
       <h1 class="nhsuk-heading-l">Check your details are correct</h1>
