--- a/app/views/v7/gov-payment-confirmed.html
+++ b/app/views/v7/gov-payment-confirmed.html
@@ -1,7 +1,7 @@
 {% extends "layout-gov.html" %}
 
 {% block page_title %}
-  GOV.UK prototype kit
+GOV.UK prototype kit
 {% endblock %}
 
 {% block content %}
@@ -9,19 +9,20 @@
 <main id="content" role="main">
   <div class="grid-row">
     <div class="column-two-thirds">
-<br>
+      <br>
       <h2>Confirm your payment</h2>
-      
+
       <div class="payment-summary-wrap">
         <div class="payment-summary">
           <h2 class="nhsuk-heading-l">Payment summary</h2>
-           
-            
-            <p class="govuk-body govuk-!-margin-bottom-0" style="font-size:19px;">
-              Total amount:
-              
-            </p>
-            <span id="amount" class="amount govuk-!-font-size-36 govuk-!-font-weight-bold" style="font-size:36px !important;"> £50</span>
+
+
+          <p class="govuk-body govuk-!-margin-bottom-0" style="font-size:19px;">
+            Total amount:
+
+          </p>
+          <span id="amount" class="amount govuk-!-font-size-36 govuk-!-font-weight-bold"
+            style="font-size:36px !important;"> £50</span>
         </div>
 
         <dl class="govuk-summary-list">
@@ -67,15 +68,16 @@
           </div>
         </dl>
 
-        
-            <div class="form-group" style="margin-top:20px">
-              <a href="full-payment-made" class="govuk-button">
-                Confirm payment
-              </a>
-              
-            
-              <p class="navigation"><a class="cancel" href="/v6-pcn/kickout/payment-has-been-cancelled">Cancel payment</a></p>
-              <!--<details class="nhsuk-details nhsuk-expander">
+
+        <div class="form-group" style="margin-top:20px">
+          <a href="payment-made" class="govuk-button">
+            Confirm payment
+          </a>
+
+
+          <p class="navigation"><a class="cancel" href="/v6-pcn/kickout/payment-has-been-cancelled">Cancel payment</a>
+          </p>
+          <!--<details class="nhsuk-details nhsuk-expander">
                 <summary class="nhsuk-details__summary">
                   <span class="nhsuk-details__summary-text">
                     Errors and flags
@@ -94,7 +96,7 @@
                   </ul>
                 </div>
               </details>-->
-            </div>
+        </div>
         </form>
       </div>
     </div>
