--- a/app/views/v7/were-you-claiming-any-benefits.html
+++ b/app/views/v7/were-you-claiming-any-benefits.html
@@ -3,34 +3,32 @@
 {% set mainClasses = "nhsuk-main-wrapper--s" %}
 
 {% block pageTitle %}
-Were you claiming any of these benefits?
+Did you have an NHS exemption
 {% endblock %}
 
 {% block outerContent %}
-
-{% endblock %}
-
-{% block content %}
-
 {{ backLink({
 href: 'javascript:history.back();',
 text: "Go back"
 }) }}
+{% endblock %}
+
+{% block content %}
 
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
     <span class="nhsuk-caption-m">Confirm your entitlement</span>
-    <form action="check-personal-details-dwp" method="POST" class="form">
+    <form action="were-you-claiming-any-benefits" method="post" class="form">
 
       {{ radios({
-      idPrefix: "example-divider",
-      name: "example-divider",
+      idPrefix: "claimBenefits",
+      name: "claimBenefits",
       fieldset: {
       legend: {
       text: "Were you claiming any of these benefits (or named on them) between 1 June
       and 30 June 2025?",
       classes: "nhsuk-fieldset__legend--l",
-      isPageHeading: true
+      isPageHeading: false
       }
       },
       items: [
@@ -55,7 +53,7 @@ text: "Go back"
       divider: "or"
       },
       {
-      value: "none",
+      value: "none-of-these",
       text: "No, none of these"
       }
       ]
@@ -64,6 +62,7 @@ text: "Go back"
       {{ button({
       text: 'Continue'
       }) }}
+
       <p><a href="respond-to-your-letter">Cancel</a></p>
 
 
