--- a/app/views/v7/pcn-details.html
+++ b/app/views/v7/pcn-details.html
@@ -137,7 +137,7 @@ Penalty Charge Notice
 
 
       {{ button({
-      text: "Start again"
+      text: "Continue"
       }) }}
     </form>
   </div>
