Fixing the routing on the benefits page.

--- a/app/views/user-research-journies/enquiry-research-1/were-you-claiming-any-benefits-decs.html
+++ b/app/views/user-research-journies/enquiry-research-1/were-you-claiming-any-benefits-decs.html
@@ -47,7 +47,7 @@
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
 
-    <form action="claiming-any-benefits" method="POST" class="form">
+    <form action="claiming-any-benefits-old" method="POST" class="form">
 
       <span class="nhsuk-caption-m">Confirm your entitlement</span>
       <h1 class="nhsuk-heading-l">Were you claiming any of these benefits (or named on them) between 18 November 2019
