--- a/app/views/v7/maternity-exemption.html
+++ b/app/views/v7/maternity-exemption.html
@@ -25,11 +25,11 @@ text: "Go back"
     <span class="nhsuk-caption-m">Confirm your entitlement</span>
 
     <div class="nhsuk-form-group">
-      <form action="maternity-exemption" method="get" class="form">
+      <form action="maternity-exemption" method="post" class="form">
 
         {{ radios({
-        idPrefix: "maternity-exemption",
-        name: "maternity-exemption",
+        idPrefix: "maternityExemption",
+        name: "maternityExemption",
         classes: "nhsuk-radios--inline",
         fieldset: {
         legend: {
