--- a/app/views/v7/no-valid-exemption.html
+++ b/app/views/v7/no-valid-exemption.html
@@ -21,7 +21,7 @@ text: "Go back"
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
 
-    <form action="5" method="get" class="form">
+    <form action="no-valid-matex" method="post" class="form">
 
       <span class="nhsuk-caption-m">Confirm your entitlement</span>
 
@@ -39,8 +39,8 @@ text: "Go back"
           have to pay your penalty charge.</p>
 
         {{ radios({
-        idPrefix: "example",
-        name: "example",
+        idPrefix: "payment",
+        name: "payment",
         fieldset: {
         legend: {
         text: "What do you want to do next?",
