--- a/app/views/v7/date-of-birth.html
+++ b/app/views/v7/date-of-birth.html
@@ -2,11 +2,11 @@
 
 {% block pageTitle %}{{ serviceName }} - What is your date of birth?{% endblock %}
 
-{% block beforeContent %}
-  {{ backLink({
-    href: 'javascript:history.go(-1);',
-    text: 'Go back'
-  }) }}
+{% block outerContent %}
+{{ backLink({
+href: 'javascript:history.back();',
+text: "Go back"
+}) }}
 {% endblock %}
 
 
@@ -21,37 +21,37 @@
       id: 'dateOfBirth',
       namePrefix: 'dateOfBirth',
       fieldset: {
-        legend: {
-          text: 'What is your date of birth?',
-          classes: 'nhsuk-label--l',
-          isPageHeading: true
-        }
+      legend: {
+      text: 'What is your date of birth?',
+      classes: 'nhsuk-label--l',
+      isPageHeading: true
+      }
       },
       hint: {
-        text: 'For example, 15 3 1984'
+      text: 'For example, 15 3 1984'
       },
       items: [
-        {
-          name: 'day',
-          classes: 'nhsuk-input--width-2',
-          value: data.dateOfBirth.day
-        },
-        {
-          name: 'month',
-          classes: 'nhsuk-input--width-2',
-          value: data.dateOfBirth.month
-        },
-        {
-          name: 'year',
-          classes: 'nhsuk-input--width-4',
-          value: data.dateOfBirth.year
-        }
+      {
+      name: 'day',
+      classes: 'nhsuk-input--width-2',
+      value: data.dateOfBirth.day
+      },
+      {
+      name: 'month',
+      classes: 'nhsuk-input--width-2',
+      value: data.dateOfBirth.month
+      },
+      {
+      name: 'year',
+      classes: 'nhsuk-input--width-4',
+      value: data.dateOfBirth.year
+      }
       ]
       }) }}
 
 
       {{ button({
-        text: 'Continue'
+      text: 'Continue'
       }) }}
 
 
