--- a/app/views/v7/were-you-claiming-any-benefits.html
+++ b/app/views/v7/were-you-claiming-any-benefits.html
@@ -6,7 +6,7 @@
 Did you have an NHS exemption
 {% endblock %}
 
-{% block beforeContent %}
+{% block outerContent %}
 {{ backLink({
 href: 'javascript:history.back();',
 text: "Go back"
