--- a/app/views/v7/what-you-want-to-do-next.html
+++ b/app/views/v7/what-you-want-to-do-next.html
@@ -6,11 +6,11 @@
 What do you want to do next?
 {% endblock %}
 
-{% block beforeContent %}
-  {{ backLink({
-    href: 'javascript:history.back();',
-    text: 'Go back'
-  }) }}
+{% block outerContent %}
+{{ backLink({
+href: 'javascript:history.back();',
+text: "Go back"
+}) }}
 {% endblock %}
 
 {% block content %}
@@ -25,66 +25,66 @@ What do you want to do next?
 
       {% if data.letter === 'pcn' %}
 
-        {% set radioItems = [
-          {
-            value: 'confirm-entitled',
-            text: 'Confirm I was entitled to free NHS prescripitons',
-            hint: {
-              text: "We'll check if you were getting a qualifying benefit, or had a valid exemption or prepayment certificate."
-            }
-          },
-          {
-            value: 'pay-pcn',
-            text: 'I was not entitled to free NHS prescriptions and need to pay a Penalty Charge Notice'
-          },
-          {
-            divider: 'or'
-          },
-          {
-            value: 'not-sure',
-            text: "I'm not sure if I was entitled to free NHS prescriptions and want to check"
-          }
-        ]
+      {% set radioItems = [
+      {
+      value: 'confirm-entitled',
+      text: 'Confirm I was entitled to free NHS prescripitons',
+      hint: {
+      text: "We'll check if you were getting a qualifying benefit, or had a valid exemption or prepayment certificate."
+      }
+      },
+      {
+      value: 'pay-pcn',
+      text: 'I was not entitled to free NHS prescriptions and need to pay a Penalty Charge Notice'
+      },
+      {
+      divider: 'or'
+      },
+      {
+      value: 'not-sure',
+      text: "I'm not sure if I was entitled to free NHS prescriptions and want to check"
+      }
+      ]
       %}
 
-        
+
 
       {% else %}
 
-          {% set radioItems = [
-          {
-            value: 'confirm-entitled',
-            text: 'Confirm I was entitled to free NHS prescripitons',
-            hint: {
-              text: "We'll check if you were getting a qualifying benefit, or had a valid exemption or prepayment certificate."
-            }
-          },
-          {
-            value: 'what-happens-next',
-            text: 'I was not entitled to free NHS prescriptions and want to know what happens next'
-          },
-          {
-            divider: 'or'
-          },
-          {
-            value: 'not-sure',
-            text: "I'm not sure if I was entitled to free NHS prescriptions and want to check"
-          }
-        ]
-        %}
+      {% set radioItems = [
+      {
+      value: 'confirm-entitled',
+      text: 'Confirm I was entitled to free NHS prescripitons',
+      hint: {
+      text: "We'll check if you were getting a qualifying benefit, or had a valid exemption or prepayment certificate."
+      }
+      },
+      {
+      value: 'what-happens-next',
+      text: 'I was not entitled to free NHS prescriptions and want to know what happens next'
+      },
+      {
+      divider: 'or'
+      },
+      {
+      value: 'not-sure',
+      text: "I'm not sure if I was entitled to free NHS prescriptions and want to check"
+      }
+      ]
+      %}
 
       {% endif %}
 
 
       {{ radios({
-        idPrefix: "confirm",
-        name: "confirm",
-        fieldset: {
-        legend: {
-          text: "What do you want to do next?",
-          classes: "nhsuk-fieldset__legend--l",
-          isPageHeading: true
-        }
+      idPrefix: "confirm",
+      name: "confirm",
+      fieldset: {
+      legend: {
+      text: "What do you want to do next?",
+      classes: "nhsuk-fieldset__legend--l",
+      isPageHeading: true
+      }
       },
       items: radioItems
 
